--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -7363,7 +7363,7 @@
  florentine_school:0 "フィレンツェの学派を支援"
  desc_florentine_school:1 "フィレンツェの学派は、ドナテッロ、ミケランジェロ、ブルネレスキのような芸術家の作品から生まれた、おそらく自然主義の様式とその壁画のために最も有名なイタリアの美術学派であった。[Root.GetName]はこれらの芸術家を支援しており、世界はそれを知っている。"
  support_florentine_school_title:0 "フィレンツェの学校への支援"
- support_florentine_school_desc:0 "我々は、フィレンツェの学校でイタリアの芸術家を支援する立場にある。国際的な芸術の後援者として認識されることは、我々の宣伝活動を確実に助けるだろう。"
+ support_florentine_school_desc:0 "我々の相対的な知名度のおかげで、フィレンツェの学校でイタリアの芸術家を支援する立場にある。国際的な芸術の後援者として認識されることは、間違いなく我々の宣伝活動に役立つだろう。"
  court_byzantine_refugees_title:0 "ビザンツの難民"
  court_byzantine_refugees_desc:0 "主よ、ビザンチウムはサラセン人の前に陥落した。ローマ帝国の最後の要塞であったコンスタンティノープルの都市はトルコの手に落ちた。キリスト教世界が衝撃を受ける中、ビザンツの難民たちはヨーロッパの都市や宮廷へと集まっており、彼らは古典的な知識の古い写本、アリストテレス、プラトン、ガレノスの書物、ラテン語とギリシャ語に関する知識に精通している。これらの難民を$COUNTRY$に招待することは、文化と科学の分野において、我々自身の努力に大きく貢献するかもしれない。"
  byzantine_influx:0 "ビザンツ人の流入"
@@ -7379,7 +7379,7 @@
  commedia_dellarte:0 "コンメディア・デッラルテ"
  desc_commedia_dellarte:0 "元々、イタリアとフランスで発展した「コンメディア・デッラルテ」は、16～18世紀のヨーロッパで人気のある演劇であった。その起源はギリシャとローマの演劇の慣習にさかのぼることができるが、コンメディア・デッラルテは「ハーレクィン」や「パンタローネ」などの役柄にとっておそらく最もよく記憶されている独自の技術革新であった。"
  support_commedia_dellarte_title:0 "コンメディア・デッラルテの上演"
- support_commedia_dellarte_desc:0 "聞け、聞け！伝統的なコンメディア・デッラルテに、パンタローネやハーレクィン、その他の陳腐な役柄で、あなたの疑うことのない人々を解放させ、彼らがおどけ、悪ふざけするのを観察しよう。良いコメディーは、彼らの日々の生活が、専制的な支配者の束縛の下で疲れていることを、しばらくの間忘れさせることができる。さらに、それは楽しい！"
+ support_commedia_dellarte_desc:0 "よく聞け、皆の衆よ！伝統的なコンメディア・デッラルテのキャラクターであるパンタローネ（老人）、ハーレクィン（道化者）や他の定番のキャラクター全てを、あなたの疑うことを知らない住民の前で解き放ち、彼らが道化や悪ふざけに夢中になるのを見よ。素晴らしいコメディー作品は、誰もが少しの間、圧政的な支配者の束縛の下で、彼らの日々の生活が徒に過ごされていることを忘れさせることができるのだ。加えて、それは楽しい！"
  military_modernization_muslim_title:0 "軍事の近代化"
  military_modernization_muslim_desc:0 "我々は、我々の文化的な生活を、どうにか強力な隣人たちと同等のものとすることができた。我々は彼らの習慣を実践し、彼らの服を着用し、我々のいくらかは彼らの言語さえ話す。しかしながら、本当の試練、軍の向上がまだ残っている。"
  military_modernization_eastern_title:0 "軍事の近代化"
