--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -1609,7 +1609,7 @@
  wof_ven_challenge_papal_supremacy_title:0 "教皇権への挑戦"
  wof_ven_challenge_papal_supremacy_desc:0 "我々は長い間、教皇と一定の理解を維持してきた。教皇は我々の教会の問題に干渉せず、我々は教皇の問題に干渉しなかった。しかし、最近、我々自身の力が高まるにつれて、教皇はより積極的になり、ヨーロッパ中の教会問題に関与し始めた。我々は教皇に我々の古い取り決めを思い出させ、そして教皇庁の権力の掌握を確認する時だ。"
  wof_ven_nuova_promissione_ducale_title:0 "ドゥカーレの誓約"
- wof_ven_nuova_promissione_ducale_desc:0 "ドゥカーレの誓約は、すべての候補者が新しいヴェネツィアのドージェになるために誓う必要がある使命の誓いである。それはドージェの義務を概説し、ドージェの権力の限界を述べている。しかし、何年にもわたって、いくつかの確認は…少し欠けている。我々が新しいドゥカーレの誓約を起草する場合、我々の価値観とドージェに想定される役割をよりしっかりと再言したものは、我々の政府を強化するだけでなく、より有能な候補者も同様に改良するかもしれない。"
+ wof_ven_nuova_promissione_ducale_desc:0 "ドゥカーレの誓約は、すべての候補者が新しいヴェネツィアのドージェになる際に行う必要がある就任の宣誓である。それはドージェの義務を概説し、ドージェの権力の限界を述べている。しかし年月を重ねるにつれ、その阻止力は…やや衰えてきている。我々が新しいドゥカーレの誓約を起草するならば、我々の価値観とドージェに想定される役割をよりしっかりと再言した内容になり、さらには我々の政府を強化するだけでなく、より有能な者が立候補してくれるようになるかもしれない。"
  wof_ven_standardize_relazioni_title:0 "報告書の標準化"
  wof_ven_standardize_relazioni_desc:0 "「Relazioni」は、大使が政府に送る報告書であり、彼らが勤務する国の政治的、財政的、社会的状態を詳しく説明している。これらの文書は、我々自身の外交活動と海外の商人の競争上の優位性を維持するために不可欠なものだが、しかし、報告書の複写を公開して、高額の代金を支払う意思のある人がそれを利用できるようにすることは、ますます一般的になっている。これは我々自身の外交と安全に対する脅威である。我々はこれらの発行を取り締まり、報告書の執筆と配布について共通で安全な体制を確立する必要がある。"
  wof_ven_destroy_austria_title:0 "オーストリアを打ち破れ"
@@ -2295,7 +2295,7 @@
  hun_integrate_croatia_title:0 "クロアチアの統合"
  hun_integrate_croatia_desc:0 "1102年に協定条項が締結されて以来、クロアチア王国は我々と個人的な結びつきの関係にある。クロアチア王国の領土を確実に我々の支配下に置くためには、より緊密な統合を目指すか、あるいは関係を強化する必要がある。"
  hun_recover_dalmatia_title:0 "ダルマチアの奪還"
- hun_recover_dalmatia_desc:0 "国内紛争により、ハンガリー王家のダルマチア地方は1409年にヴェネツィアに売却された。アドリア海支配の鍵となるこれらの豊かな都市を、敵の手に委ねておくわけにはいかない。我々が力を取り戻し、クロアチア支配を強化した今こそ、ダルマチアを我々自身の手に取り戻すときである。"
+ hun_recover_dalmatia_desc:0 "内紛により、ハンガリー王家のダルマチア地方は1409年にヴェネツィアに売却された。アドリア海支配の鍵となるこれらの豊かな都市を、敵の手に委ねておくわけにはいかない。我々が力を取り戻し、クロアチア支配を強化した今こそ、ダルマチアを我々自身の手に取り戻すときである。"
  hun_legacy_of_louis_the_great_title:0 "ラヨシュ大王の遺産"
  hun_legacy_of_louis_the_great_desc:0 "ハンガリー・アンジュー王家による栄光の治世の間、ハンガリー聖冠はナポリを所有物に入れていた。アドリア海が我が国の支配下に入った今、我が国はナポリ王位継承権を主張し、ラヨシュ1世の遺産を取り戻す自由を得たのである。"
  hun_control_moldavia_new_title:0 "モルダヴィアの支配"
@@ -6040,7 +6040,7 @@
  yua_curbed_eunuch_influence:0 "宦官の影響力の制限"
  desc_yua_curbed_eunuch_influence:0 "宦官の影響力は今や無いも同然だ。"
  yua_cornerstone_empire_title:0 "帝国の基礎"
- yua_cornerstone_empire_desc:0 "これほど広大な国土を持つ国は、我が中庭にいる少数の有力者に頼らざるを得ない。そのため、安定運用確保のためには、最善の方法を見極め、権力を適切に分配せねばならない。"
+ yua_cornerstone_empire_desc:0 "これほど広大な国土を持つ国は、我が中庭にいる少数の有力者に頼らざるを得ない。したがって、適切な安定性と運用上の信頼性を確保するためには、権力を適切に分配せねばならない。"
  yua_control_eunuchs_title:0 "宦官の統制"
  yua_control_eunuchs_desc:0 "中国の歴史が始まって以来、宦官は皇帝と宮廷を支配してきた。彼らのおかげで多くの紛争や腐敗が生まれてきた。過去の過ちを繰り返すのではなく、宥める方法を見つけるべきだ。"
  yua_promote_grand_coordinators_title:0 "巡撫"
@@ -6064,7 +6064,7 @@
  yua_pure_land_title:0 "浄土"
  yua_pure_land_desc:0 "内外の問題で成功を収めたとしても、心の庭を手入れし、富と自国の繁栄するために大切にしてきた教えを反映した正式の礼拝所を設けることを忘れてはならない。"
  yua_shengshi_zhishi_title:0 "盛世と治世"
- yua_shengshi_zhishi_desc:0 "過去の王朝の歴史も、そして自国王朝の物語も、常に変動と波のように左右されてきた。成長期、退廃期、破壊期、再生期はすべて人生の一部だ。しかし、だからといって、自王朝の発展と統治に最善を尽くすことができないと解釈すべきではない。"
+ yua_shengshi_zhishi_desc:0 "過去の王朝の歴史も、そして自国王朝の物語も、常に盛衰の波に左右されてきた。成長期、退廃期、破壊期、再生期はすべて人生の一部だ。しかし、だからといって、自王朝の発展と統治に最善を尽くすことができないと解釈すべきではない。"
  yua_form_depots_title:0 "廠衛の形成"
  yua_form_depots_desc:0 "忠実な臣下を任命し、天命の恩寵を授かったとはいえ、偉大なる皇帝に仕える者たちは、時には間の本性に翻弄される。その対策として、臣下の事務や内政を監視する諜報機関を設立できる。"
  yua_outer_city_beijing_title:0 "[1816.GetName]城外"
