--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -40,12 +40,12 @@
  siberian_events.3.a:0 "これについてできることはない。"
  siberian_events.3.b:0 "領民を統治する必要がある。"
  siberian_events.4.t:0 "コサックの探検"
- siberian_events.4.d:0 "コサックの探検家の集団はシベリアの川に沿って深く侵入していった。このような私的な探検は利益がある分、時として障害もまた多く、自由な考えを持つコサックたちは、地元の住民や彼らが通る州の間に道を開くために武力や強制、欺瞞を用いることにあまり疑問を覚えない。\n戻ってきた探検隊は今日良い知らせを持ってきた。新しい地図に加え、貴重な商品をもってきたのだ。"
+ siberian_events.4.d:0 "コサックの探検家の集団はシベリアの川に沿って深く侵入していった。こうした私的な探検は利益もある分、時として障害もまた多く、自由な考えを持つコサックたちは、地元民や遭遇する諸国に対して自らの要求を通すために、武力や強制、欺瞞を躊躇なく用いる傾向がある。\n戻ってきた探検隊は今日良い知らせを持ってきた。新しい地図に加え、貴重な商品をもってきたのだ。"
  siberian_events.4.a:0 "素晴らしい知らせだ！"
  EST_VAL_COSSACK_EXPLORERS:0 "コサックの探検家: §Y$VAL$%§!"
  siberian_events.4.b:0 "コサックを統制する！"
  siberian_events.5.t:0 "[cossack_exploration_province.GetName]の幕間劇"
- siberian_events.5.d:0 "事業家たちはたまにコサックの探検家にシベリアの川に沿って侵入するために、資金を提供することがある。これらの探検は利益もある分、時として障害もまた多く、自由な考えを持つコサックたちは、地元の住民や彼らが通る州の間に道を開くために武力や強制、欺瞞を用いることにあまり疑問を覚えない。\n今帰ってきた探検隊は参加者は多くの富を得たが、それによって地域の部族に加えて、隣国の一つと衝突も引き起こした。"
+ siberian_events.5.d:0 "事業家たちは、シベリアの川に沿って侵入するため、たまにコサックの探検家に資金を出すことがある。こうした探検は利益もある分、時として障害もまた多く、自由な考えを持つコサックたちは、地元民や遭遇する諸国に対して自らの要求を通すために、武力や強制、欺瞞を躊躇なく用いる傾向がある。\n今帰ってきた探検隊は参加者が多くの富を得たものの、それによって地域の部族に加えて、隣国の一つとも衝突を引き起こした。"
  siberian_events.5.a:0 "不幸だが必要な副作用だ。"
  siberian_events.5.b:1 "損害を受けたものを保証せねばなるまい。"
  siberian_events.6.t:0 "シベリアからの贈り物"
@@ -72,7 +72,7 @@
  russian_principality_events.2.d:0 "滅多にない長期の平和と安定により、大司教や大貴族の土地に住む農民はより近代的な農地技術を受け入れ始めることができた。焼き畑農業は我が国の大部分で行われているが、輪作の広がりによって人口の一部が明らかに成長している。"
  russian_principality_events.2.a:0 "素晴らしい。"
  russian_principality_events.3.t:1 "小領主"
- russian_principality_events.3.d:1 "タタールのくびきという遠くなる記憶と、[Root.Monarch.GetTitle]によって直接支配される土地の広がりにより、我々にはもっと小さな土地持ちが必要なことが徐々に明らかとなった。伝統的に、土地の貴族はこの特権が与えられる第一の候補者であったが、土地の再分化にしても大きな国内の安定にしても、経済や農業に関する物事に注意を向けることのできる資質を持った者を起用していくほうが良さそうだ。"
+ russian_principality_events.3.d:1 "タタールのくびきが次第に遠い記憶となり、[Root.Monarch.GetTitle]によって直接支配される土地が拡大するにつれ、小さな土地持ちを増やす必要が露呈した。伝統的に、地主貴族がこの特権が与えられる第一の候補者であり、土地が小さかろうと同様である。しかし国内が安定してきており、 経済と農業に関するこれらの問題を担当する人物として、他の資質を持つ人物を起用してもよいだろう。"
  russian_principality_events.3.a:1 "ボヤールを重用し続けていこう。"
  russian_principality_events.3.b:1 "もっと小さな土地所有者に土地を配ろう。"
  russian_principality_events.4.t:0 "土地取得"
@@ -105,7 +105,7 @@
  russian_principality_events.9.a:0 "素晴らしいアイデアだ！"
  russian_principality_events.9.b:0 "我々の国内ではムスリムにそのような権利は与えられない。"
  russian_principality_events.10.t:0 "[kremlin_here.GetCapitalName]のクレムリン"
- russian_principality_events.10.d:0 "我が[Root.GovernmentName]が成長するに伴い、[kremlin_here.GetCapitalName]にある我が国の首都の重要性もまた増大している。多くのロシアにある都市と同様に、[kremlin_here.GetCapitalName]の中核は上流階級、管理当局、軍事部局をおさめるその城砦なるクレムリンである。城壁の外では拡大し続ける商業ポサード（入植地）の管区や一般的な郊外が広がる。\n全体の配置はクレムリンの大きさと強さによって決まるが、多くの者は我々のそれが不適当に小さく古めかしいものとなるのではないかと危惧している。我が国の如き大望有る国家ならば、そのクレムリンは絶えず改善し、拡張し、よく整備されているようにしなければならない。"
+ russian_principality_events.10.d:0 "我が[Root.GovernmentName]が成長するに伴い、[kremlin_here.GetCapitalName]にある我が国の首都の重要性もまた増大している。多くのロシアにある都市と同様に、[kremlin_here.GetCapitalName]の中核は上流階級、管理当局、軍事部局をおさめるその城砦なるクレムリンである。城壁の外では拡大し続ける商業ポサード（入植地）の管区や一般的な郊外が広がる。\nこの全体の配置はクレムリンの規模と勢力によって決まるが、多くの者は我々のそれの規模が不適当に小さく古臭いのではないかと危惧している。我が国の如き大望有る国家ならば、そのクレムリンは絶えず改善し、拡張し、よく整備されているようにしなければならない。"
  russian_principality_events.10.a:0 "これは多くの人的資源を必要とする。"
  russian_principality_events.10.b:0 "これは都市の住人に寄付させるよう要求する。"
  russian_principality_events.10.c:0 "これは教会が支払う。"
