Save/Update files [ci skip]

--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -3165,7 +3165,7 @@
  flavor_geo.1.d:0 "かつてコーカサスで突出した勢力で、他の追随を許さない覇権国家であったグルジアは、数世紀にわたり、劇的な没落に見舞われ、その秀でた地位を失いました。繁栄の時代はモンゴルやトルコ、ティムールの襲来によって突如として終わりを告げ、容赦なき生存競争への道を開きました。この勢力の衰退は経済の衰退を伴い、さらなる特権を要求するどうしようもない貴族を生み出しました。\n\nこの問題に対処しようと、国王アレクサンドレ1世は由緒あるビザンツの伝統に倣って、自身の三人の息子を共同統治者として任命し、息子たちが王国の統治権を共有する三頭政治として知られる独自体制を確立しました。しかし、アレクサンドレが1442年に退位しこの体制は短命に終わり、アレクサンダーは1442年に王位を放棄し修道院に隠遁してしまったため、この取り決めは短命に終わってしまいました。\n\n彼の長男、ヴァフタングは王位を請求しましたが、彼の名を継ぐ後継者がいなかったので、貴族と彼の兄弟は機が熟すのを待ち、自ら王位を主張する機会を心待ちにしています。それ故、私たち王国の将来の軌跡は疑念に包まれたままとなっています。"
  flavor_geo.1.a:0 "勝つんだよ！"
  flavor_geo.2.t:0 "ローマの後継者"
- flavor_geo.2.d:0 "何世紀にもにわたって、ビザンツ帝国は勇敢にコンスタンティノープルを守りましたが、現在ではビザンツの栄光の炎は徐々に消えつつあります。グルジアがその外套を掴み、他国が頓挫した場所で成功し、ローマの何層もの歴史の基盤の上に新たな遺産を築く時が来ました。グルジアの再征服は、正義、力強さ、揺るがぬ信仰の原則に導かれ、グルジアの統治者が即位するとともに、新たなローマの時代の復活であるコンスタンティノープルへの凱旋を描きます。これを導くでしょう。この重大な出来事において、不屈の精神と武勇で強化されたグルジアは、正教世界の防波堤になるでしょう。グルジアの手で形作られる新たなローマの遺産は、ビザンツの栄光の炎を再び灯し、正教信仰に新たな生命を吹き込むでしょう。現在ではグルジアの後見下にあるコンスタンティノープルの城壁は、敵の襲来に対抗し、希望を呼び起こし、次世代のために正教会の遺産を守る難攻不落の砦となるでしょう。世界はこの歴史的な章が展開するのを固唾をのんで見守っています。"
+ flavor_geo.2.d:0 "何世紀にもにわたって、ビザンツ帝国は勇敢にコンスタンティノープルを守りましたが、現在ではビザンツの栄光の炎は徐々に消えつつあります。グルジアがその外套を掴み、他国が頓挫した場所で成功し、ローマの何層もの歴史の基盤の上に新たな遺産を築く時が来ました。グルジアの再征服は、正義、力強さ、揺るがぬ信仰の原則に導かれ、グルジアの統治者が即位するとともに、新たなローマの時代の復活であるコンスタンティノープルへの凱旋を目論んでいます。この重大な出来事において、不屈の精神と武勇で強化されたグルジアは、正教世界の防波堤になるでしょう。グルジアの手で形作られる新たなローマの遺産は、ビザンツの栄光の炎を再び灯し、正教信仰に新たな生命を吹き込むでしょう。現在ではグルジアの後見下にあるコンスタンティノープルの城壁は、敵の襲来に対抗し、希望を呼び起こし、次世代のために正教会の遺産を守る難攻不落の砦となるでしょう。世界はこの歴史的な章が展開するのを固唾をのんで見守っています。"
  flavor_geo.2.a:0 "不死鳥よ舞いあがれ！"
  flavor_geo.3.t:0 "サライ陥落"
  flavor_geo.3.d:0 "大オルダの中心に侵入しました。ハンの大都市は陥落し、タタールのくびきとステップにおける遊牧民支配の終わりを告げています。長年にわたってキリスト教世界を脅かし、無数の国々を服従させてきた災厄は、今や歴史のものとなったのです。復讐を渇望する勇敢なる自国の兵士たちは、この都市がもう一度ステップに飲み込まれる準備が整うように、都市を焼き払い、燻る廃墟へと変える命令を待つばかりです。"
@@ -4101,7 +4101,7 @@
  has_exported_grain_in_africa_tt:0 "少なくとも一回以上§Yアフリカ§!に首都がある国家に穀物を輸出した"
  has_exported_grain_in_asia_tt:0 "少なくとも一回以上§Yアジア§!に首都がある国家に穀物を輸出した"
  has_never_formed_latin_empire_tt:0 "§Yラテン帝国§!となることに一度も応じていない"
- has_any_ongoing_construction_tt:0 "この州で進行中の§Y仕事§!がない（建設、改宗など。）"
+ has_any_ongoing_construction_tt:0 "この州で進行中の§Y仕事§!がない（建設、改宗など）"
  mams_disc_tt:0 "自国の特殊ユニットの§Yマムルーク§!は規律§G+5%§!を獲得します。"
  mam_disc_troops_modifier:0 "近代化されたフルーシーヤ"
  estate_nobles_enlist_the_mamluks:0 "マムルークの入隊"
