--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -133,7 +133,7 @@
  MAPMODE_PARLIAMENT_SEATS_DESC:0 "どの州で議会の議席を割り当てられているかを表示します。"
  PARLIAMENT_SEATS_TOOLTIP:0 "$PROVINCE|Y$州は議会の議席を持っている"
  SPECIAL_UNIT_FORCELIMIT_MODIFIER_LABEL:0 "この数値はさらに以下の要因によって$VAL|+%$乗算される:\n$MODIFIER$\n\n"
- TRADE_NODE_INCOME_EFFECT:0 "$NODE|Y$交易ノードから$AMOUNT|0$ヵ月分の収入に相当する$VALUE$ダカットを$DIRECTION$する。\n"
+ TRADE_NODE_INCOME_EFFECT:0 "$NODE|Y$交易ノードから$AMOUNT|0$ヵ月分の収入に相当する$VALUE$ダカットを$DIRECTION$します。\n"
  GRANT_PRIVILEGE_SHORT:0 "$PRIVILEGE|Y$が$ESTATE|Y$に与えられ、以下があります："
  REVOKE_PRIVILEGE_SHORT:0 "$PRIVILEGE|Y$が$ESTATE|Y$から取り消され、以下がなくなります："
  PRIVILEGE_EFFECTS:0 "§Y効果：§!"
