Save/Update files [ci skip]

--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -2236,7 +2236,7 @@
  hindusthan_region_adj:0 "ヒンドゥスターン"
  rajputana_region:0 "ラージプーターナー"
  rajputana_region_name:0 "ラージプーターナー"
- rajputana_region_adj:0 "ラージプーターナー"
+ rajputana_region_adj:0 "ラージプート"
  deccan_region:0 "デカン"
  deccan_region_name:0 "デカン"
  deccan_region_adj:0 "デカン"
