--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2298,7 +2298,7 @@
  flavor_hab.EVTOPTA3216:0 "啓蒙の改革"
  flavor_hab.EVTOPTB3216:0 "変更しない。"
  flavor_hab.EVTNAME3328:0 "帝国宮内法院"
- flavor_hab.EVTDESC3328:0 "帝国宮内法院は1497年にマクシミリアン1世によって制定され、マインツ選帝侯によって任命される副大法官を除いて、皇帝によって任命される21人の顧問から成っていた。それは帝国議会が先に彼に強制した帝室裁判所のライバルとなるものであった。評議員のうちの6人はプロテスタントであり、彼らの一致した投票は効果的な拒否権となった。"
+ flavor_hab.EVTDESC3328:0 "帝国宮内法院は1497年にマクシミリアン1世によって制定され、マインツ選帝侯によって任命される副大法官を除いて、皇帝によって任命される21人の顧問から成っていた。それは帝国議会が先に彼に押し付けた帝室裁判所に対抗するためのものであった。評議員のうちの6人はプロテスタントであり、彼らの一致した投票は効果的な拒否権となった。"
  flavor_hab.EVTOPTA3328:0 "この新しい評議会を作成する。"
  flavor_hab.EVTOPTB3328:0 "このような世俗的な事柄は貴族にやらせよう。"
  flavor_hab.EVTNAME3332:0 "ハンガリーの抑圧"
