--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -837,7 +837,7 @@
  tr_subjugate_kazan_title:0 "カザンの服属化"
  tr_subjugate_kazan_desc:0 "カザンはヴォルガ川沿いの主要な交易路に位置している。ロシアの繁栄のため、それは母なるロシアに属していなければならない。"
  rus_patriarchate_mission_title:0 "ロシア総主教"
- rus_patriarchate_mission_desc:0 "コンスタンティノープルはビザンツ帝国の正統性なしにキリスト教正統派の精神的中心であるはずがない。マントを手に入れ、第三のローマを確立する必要がある！"
+ rus_patriarchate_mission_desc:0 "コンスタンティノープルは、ビザンツ皇帝の正統性なしには正教会の精神的中心にはなりえない。我々はマントを受け取り、第三のローマを樹立せねばならない！"
  rus_churches_mission_title:0 "教会の地"
  rus_churches_mission_desc:0 "我が国家の市民、大公から農民まで全員が司祭からの霊的な指導を利用出来ることは不可欠だ。全村落に教会がなければならない。"
  rus_romania_conquest_title:0 "ルーマニアの征服"
