--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -20,16 +20,16 @@
  cotton_weaving:0 "綿織り機"
  cotton_weaving_desc:0 "隣国と違って、我が国で育つ植物から非常に価値のある良質な衣服を織る方法を知っている。彼らと交易すれば我らの民に富をもたらすことが出来る。"
  kachina_dolls:0 "カチーナ人形"
- kachina_dolls_desc:0 "世界を形成する霊魂の姿を人形に宿すことで、我々の子孫にそれら霊魂が顕す知識や伝承を伝えることができるし、我々の社会を永久に遺すこともできるのだ。"
+ kachina_dolls_desc:0 "世界を形成する精霊の姿を模した人形を用いることで、我々の子孫にそれら精霊が顕す知識や伝承を伝え、我々の社会の持続を確保することができる。"
  clown_societies:0 "道化師の社会"
- clown_societies_desc:0 "私たちは魂の儀式におけるカチーナ・マスクの着用といった道化師の伝統や芸術を維持する社会を形成しなければならない。そうすれば彼らの存在を忘れず、異なる社会間の緊張も和らぐことだろう。"
+ clown_societies_desc:0 "我々は、儀式で精霊を表すカチーナ・マスクを着用する道化師の、伝統や芸術を維持する社会を形成しなければならない。そうすれば我々の民は自らのアイデンティティを忘れず、異なる社会間の緊張も和らぐことだろう。"
  legend_of_cibola:0 "シボラの伝説"
  legend_of_cibola_desc:0 "はるか遠くから私達の都市を目撃した訪問者は、メサの頂上に位置したキラキラ光る泥状の壁を金の壁だと、しばしば見間違えた。このことは確実に世界の目を我々に引き寄せることになった。"
  colonial_nation.EVTOPTB4:0 "彼は処刑されなければならない！"
  reduction_of_charles_xi:0 "削減"
  desc_reduction_of_charles_xi:0 "土地の払い下げは国家財政を強化します。"
  reichshofrat:0 "帝国宮廷顧問会議"
- desc_reichshofrat:0 "帝国宮廷顧問会議は、皇帝によって設立されたが、それは帝国議会に皇室裁判所に匹敵する法執行機関の設立を強制されてのものだった。"
+ desc_reichshofrat:0 "帝国宮廷顧問会議は皇帝によって設立されたが、それは皇帝が帝国議会によって押し付けられた帝国裁判所に対抗する法執行機関を設立するためであった。"
  saint_lawrence_estuary_modifier:0 "セントローレンス川河口"
  desc_saint_lawrence_estuary_modifier:0 "重要な川であるセントローレンス川河口を掌握することで、地域内の交易力を強化できる。"
  hudson_estuary_modifier:0 "ハドソン川河口"
@@ -38,9 +38,9 @@
  desc_nelson_eastuary_modifier:0 "重要な川であるネルソン川河口を掌握することで、地域内の交易力を強化できる。"
  desc_ship_building_problems:0 "船の需要の急増から造船期間とコストが増加しています。"
  tariffs_on_cocoa:0 "ココアへの関税"
- desc_tariffs_on_cocoa:0 "私達の祖国は、ココアへの特別関税を導入することによって我々の経済圏を手中に収めようとしている。"
+ desc_tariffs_on_cocoa:0 "我々の母国は、ココアへの特別関税を導入することによって、経済による支配を強化した。 "
  aspiration_for_liberty:0 "自由への願望"
- desc_aspiration_for_liberty:0 "人民が自由と啓蒙主義的な制度を求め努力することは、もはや避けることのできない革命の到来に拍車をかけた。"
+ desc_aspiration_for_liberty:0 "民衆の自由への渇望と啓蒙主義的理想の実現への願望が、もはや避けることのできない革命を促している。"
  PROV2025:0 "サウスジョージア"
  HAVNT_NEW_DYNASTY:0 "新しい王朝に変わっていない"
  HAVE_NEW_DYNASTY:0 "新しい王朝に変わっている"
@@ -70,7 +70,7 @@
  colonial.EVTDESC21:0 "[Root.Owner.ColonialParent.GetName]から巡礼者などとよばれている彼らは、[Root.Owner.ColonialParent.GetAdjective][Root.Owner.ColonialParent.Religion.GetName]教会の忌み嫌われたプロテスタント信仰に従っています。新世界でより寛容な社会を見いだすために、彼らは[Root.GetName]に定住しました。"
  colonial.EVTDESC22:0 "[Root.Owner.ColonialParent.GetName]から巡礼者などとよばれている彼らは、[Root.Owner.ColonialParent.GetAdjective][Root.Owner.ColonialParent.Religion.GetName]教会の忌み嫌われたカトリック信仰に従っています。新世界でより寛容な社会を見いだすために、彼らは[Root.GetName]に定住しました。"
  flavor_fra.EVTNAME100:0 "地獄の仕掛け"
- flavor_fra.EVTDESC100:1 "我々が最も愛する[Root.Monarch.GetTitle]の命に対する企みが行われた！王党派の共謀者たちは、ナポレオンが、ジョセフ・ハイドンのオラトリオ『天地創造』のオープニングを見るため、オペラに向かう途中にある、聖ニケーズ街に停められていた荷馬車に積んだ桶に爆弾を隠した。「地獄の仕掛け」と名付けられたこの爆弾は、火薬、可燃性物質、弾丸で満たされ、長い導火線がついていた。爆発は数人の見物人を殺したが、ナポレオンは無傷で生還した。"
+ flavor_fra.EVTDESC100:1 "我々が最も愛する[Root.Monarch.GetTitle]の命を狙う企みが行われた！王党派の共謀者たちは、ナポレオンが、ジョセフ・ハイドンのオラトリオ『天地創造』のオープニングを見るため、オペラに向かう途中にある、聖ニケーズ街に停められていた荷馬車に積んだ桶に爆弾を隠した。「地獄の仕掛け」と名付けられたこの爆弾は、火薬、可燃性物質、弾丸で満たされ、長い導火線を用いて点火された。爆発は数人の見物人を殺したが、ナポレオンは無傷で生還した。"
  flavor_fra.EVTOPTA100:1 "幸運な逃避だ。"
  flavor_fra.EVTNAME101:0 "帝国への憧憬"
  flavor_fra.EVTDESC101:2 "第一統領就任を単なる通過点として満足しなかった男がいました。その男の名はナポレオン・ボナパルト。彼はフランス皇帝への即位を画策しています。世襲を復活させれば以前のフランス王たちの復権が難しくなるだろう、と彼は主張しており、自身のフランス王の戴冠を正当化していますーどっちみち、彼の人生の中で、王党派の陰謀と思われるものがいくつか現れることになるのですがねーとはいえ、最大の動機は、最高権力に対するさらなる自分の野心のためだったことは間違いないでしょう。この提案は、革命以前の相対的に安定していた時代を切望する人々に幅広く支持されました。しかし、革命を熱烈に支持する者たちは、この試みによって、さらに大きな権力がナポレオンの手中に入り、権力が集中することについて懸念を表明しています。"
@@ -114,7 +114,7 @@
  religious_events.17.a:0 "これは不法だ！"
  religious_events.17.b:0 "素晴らしい。"
  religious_events.18.t:0 "[Root.GetName]がキリスト教に改宗する"
- religious_events.18.d:0 "我が国のキリスト教共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に送られたすべての宣教師は、最終的に恩恵を受けました。"
+ religious_events.18.d:0 "我が国のキリスト教共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に派遣されたすべての宣教師の努力がついに実を結んだ。"
  religious_events.18.a:0 "教皇聖下も感心されるだろう。"
  religious_events.18.b:0 "我らこそが新たなローマである。"
  religious_events.18.c:0 "我々はコプト総主教に言葉を送らなければならない。"
@@ -122,18 +122,18 @@
  religious_events.18.e:0 "国教化の時が来た。"
  religious_events.18.f:0 "私たちの先祖の信仰に忠実でいよう。"
  religious_events.19.t:0 "[Root.GetName]がイスラム教に改宗する"
- religious_events.19.d:0 "我が国のムスリム共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に送られたすべての宣教師は、最終的に恩恵を受けました。"
+ religious_events.19.d:0 "我が国のムスリム共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に派遣されたすべての宣教師の努力がついに実を結んだ。"
  religious_events.19.a:0 "我らは今後、スンナ派の教えに従う。"
  religious_events.19.b:0 "我らがイマームを光栄に思う時だ。"
  religious_events.19.c:0 "我らはイブン・イバードの伝統に従う。"
  religious_events.20.t:0 "[Root.GetName]が仏教に改宗"
- religious_events.20.d:0 "我が国の東方宗教共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に送られたすべての師僧は、最終的に恩恵を受けました。"
+ religious_events.20.d:0 "我が国の東方宗教共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に派遣されたすべての師僧の努力がついに実を結んだ。"
  religious_events.20.a:0 "我らは今後パーリ仏典に従う。"
  religious_events.20.b:0 "ラマを[Root.Capital.GetCapitalName]にできるだけ早く招待しなければなりません。"
  religious_events.20.c:0 "古典の入念な研究を通して、より良い方法を見つけることができます。"
  religious_events.20.dd:0 "私達は神のやり方を理解するために努力する必要があります。"
  religious_events.21.t:0 "[Root.GetName]の改宗"
- religious_events.21.d:0 "我が国のダルマ教共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に送られたすべての僧は、最終的に恩恵を受けました。"
+ religious_events.21.d:0 "我が国のダルマ教共同体は、彼らの信奉する教義が国教化されるという意向を知るにつれて喜んでいます。[Root.Capital.GetName]の宮廷に派遣されたすべての僧の努力がついに実を結んだ。"
  religious_events.21.a:0 "我らは今後サナータナ・ダルマを尊重する。"
  religious_events.21.b:0 "我らは大導師の足跡を辿るだろう。"
  religious_events.22.t:0 "[Root.GetName]がゾロアスター教に改宗"
@@ -174,17 +174,17 @@
  the_wandering_people:0 "流浪の民"
  the_wandering_people_desc:0 "どこに行っても、戦いが私たちにつきまとった。しかし、私たちは進む、海を越え大河を越え、異なる地を目指して。だから、再び戦いが起これば、すぐに移動できるよう準備を整えていなければなりません。"
  dark_and_bloody_ground:0 "暗い流血の地"
- dark_and_bloody_ground_desc:0 "私達の祖先の故郷は戦後、古戦場となった。そう主張して保存しようとしている人々は、そのために貴重な価格を払っています。私たちは、このような事実があったことを保存する必要があります"
+ dark_and_bloody_ground_desc:0 "我々の祖先の故郷は、幾度も戦乱の舞台となってきた。これを請求し保持しようと企てた者たちは、その代償として高い犠牲を払ってきた。我々はこの状態を永遠に維持せねばならない。"
  the_bread_dance:0 "パンダンス"
- the_bread_dance_desc:0 "田植え収穫を祝うための儀式を組織することで、私たちの生活をより良く管理し、伝統をより深めることができます。"
+ the_bread_dance_desc:0 "田植えや収穫を祝うための儀式を執り行うことで、私たちの生活をより良く管理し、伝統意識をより深めることができます。"
  shaawanwaki_identity:0 "ショーニーの独自性"
- shaawanwaki_identity_desc:0 "私たちは風に吹かれるように、何ヶ月も村々の間を彷徨っているかもしれないが、私たちがシャワワンキー、ショーニーの人々であることを忘れることは絶対にありません。"
+ shaawanwaki_identity_desc:0 "たとえ我々が風に吹かれて散り散りになり、何ヶ月も村々の間を彷徨うことになろうとも、我々がシャワワンキー、ショーニーの人々であることを決して忘れてはならない。"
  autonomous_clans:0 "自律した一族"
- autonomous_clans_desc:0 "私たち部族は互いに大きく離れ、それぞれが独自に機能し、独自に指導者を見つけることを学ぶ必要があった。そのため、ショーニー族は自らを説明する機会を多く持った。"
+ autonomous_clans_desc:0 "我らの部族は互いに大きく離れているため、それぞれの部族が単独で機能することを学び、独自に指導者を見出す必要があった。そのため、より多くのショーニー族の人々は自らの実力を示す機会を持った。"
  farreaching_relations:0 "遠大な関係"
  farreaching_relations_desc:0 "私たちは移住先で、多くの人に遭遇しました。いくつかは友人になり、あるものは敵になりましたが、これらの人々を結びつけることができれば、おそらく私たちは故郷を捨てる必要はないかもしれません。"
  private_war_parties:0 "個人戦闘部隊"
- private_war_parties_desc:0 "所属する部族を失ったメンバーを、近隣の部族は戦闘要因として迎え入れ、私的な復讐のための戦闘集団の形成を促すべきです。そうすれば、私たちの部族の多くは戦争の方法を学び、頼りになる訓練された戦士の数を増やす機会にめぐまれことでしょう。"
+ private_war_parties_desc:0 "近隣部族の行動により所属部族の者を失った人に対して、私兵部隊を形成して復讐を果たすよう促すべきです。そうすれば、我が部族の多くの者が戦争の方法を学ぶ機会にめぐまれ、頼りになる訓練された戦士の数を増やせるでしょう。"
  POWER_COST_CORE:0 "正当な中核州を持っている：$VAL$\n"
  CRE_ideas:0 "クリークのアイデア"
  CRE_ideas_start:0 "クリークの伝統"
@@ -196,9 +196,9 @@
  four_mother_towns:0 "4つの母なる町"
  four_mother_towns_desc:0 "私たちは、人々が自らの起源とする4つの町を決して忘れてはならないし、栄光の遺産を維持しようと努力しなければなりません。"
  micos_leadership:0 "ミコの指導力"
- micos_leadership_desc:0 "ミコはその地の人々を最もよく知る地元の村長に戦いを任せ、地元の村落から支援を大きく引き出す。"
+ micos_leadership_desc:0 "その地の人々を最もよく知る地元の村長であるミコに戦いを任せることで、地元の村落から支援を大きく引き出すことができる。"
  muscogee_neutrality:0 "マスコギーの中立性"
- muscogee_neutrality_desc:0 "私たちは、どんなに強力な力を持っていたとしても周囲の人々と戦うべきではない。むしろ周囲の全ての人々との交易を模索すべきです。"
+ muscogee_neutrality_desc:0 "私たちは、どんなに強力な力を持っていたとしても周囲の人々の争いに加担すべきではない。むしろ周囲の全ての人々との交易を模索すべきです。"
  red_sticks:0 "赤い棒"
  red_sticks_desc:0 "古の戦士たちが操ったという赤い武器は、私たちの戦場での強さと、戦いの伝統を思い起こさせる。彼らを忘れてはならない！"
  coptic:0 "コプト正教会"
@@ -231,7 +231,7 @@
  NAJADAT:0 "ナジャダット"
  AZRAQI:0 "アズラキー"
  construct_kiel_canal_title:0 "キール運河の建設"
- construct_kiel_canal_desc:0 "ユトランド半島を横切ってバルト海と北海をつなげる運河を建設するのは、まさに超巨大な工事となるであろうがその完成は我々の船の移動時間を大幅に削るだろう。しかしそのプロジェクトは費用が莫大で、しかも別の問題も生まれてくるだろう…"
+ construct_kiel_canal_desc:0 "ユトランド半島を横切ってバルト海と北海をつなげる運河を建設するのは、まさに超巨大な工事となるであろうが、その完成は我々の船の移動時間を大幅に削るだろう。しかしそのプロジェクトは費用が莫大で、しかも途中で追加の問題に遭遇するかもしれない…"
  construct_suez_canal_title:0 "スエズ運河の建設"
  construct_suez_canal_desc:0 "地中海を紅海につなぐためにシナイ半島とアフリカを分かつ運河を切り開くことは、本当に大きな仕事です。完成の暁には、我々の船の移動時間は大幅に短縮されるだろう。しかしプロジェクトは非常に高価で、しかも途中で追加の問題に遭遇するかもしれません…"
  construct_panama_canal_title:0 "パナマ運河の建設"
@@ -251,7 +251,7 @@
  canal_events.EVTOPTA2:0 "新担当に交代しよう"
  canal_events.EVTOPTB2:0 "その必要はない、現担当に任せよう"
  canal_events.EVTNAME3:0 "新しい担当？"
- canal_events.EVTDESC3:0 "[Root.GetName]での運河建設を邪魔するたくさんの停滞や困難を考えれば、現地の担当が意気消沈していることや多くの労働者の士気が下がっていることは何の不思議もない。もしかすると工事を引き継いで再編する新担当を送る必要があるだろうか？"
+ canal_events.EVTDESC3:0 "[Root.GetName]での運河建設を悩ませている数多くの挫折や困難を考えれば、現地の担当が意気消沈していることや多くの労働者の士気が下がっていることは何の不思議もない。おそらく、工事を引き継いで再編する新担当を送る必要があるのではないか？"
  canal_events.EVTOPTA3:0 "工事の新担当を送れ"
  canal_events.EVTOPTB3:0 "そんな余裕はない"
  canal_events.EVTNAME4:0 "地域交易の減少"
@@ -271,7 +271,7 @@
  canal_events.EVTOPTA7:0 "追加資金を投入する"
  canal_events.EVTOPTB7:0 "我らに余裕はない"
  canal_events.EVTNAME8:0 "酩酊者の増加"
- canal_events.EVTDESC8:0 "[Root.GetName]で働く労働者に、アルコールの配給量を増やすという我々のアイデアは、望ましくない効果をもたらしたようだ。酩酊者の増加が予想されていたが、赤痢や熱病ですでに弱っていた人々の死者数を増やしてしまったようだ。"
+ canal_events.EVTDESC8:0 "[Root.GetName]で働く労働者に、アルコールの配給量を増やすという我々のアイデアは、望ましくない効果をもたらしたようだ。酩酊者の増加は予想していたが、赤痢や熱病ですでに弱っていた人々の死者数も増やしてしまったようだ。"
  canal_events.EVTOPTA8:0 "配給量をもう一度減らす"
  canal_events.EVTOPTB8:0 "覆水盆に返らず"
  canal_events.EVTNAME9:0 "アルコールの配給"
@@ -279,20 +279,20 @@
  canal_events.EVTOPTA9:0 "良い考えに思えるな"
  canal_events.EVTOPTB9:0 "それは間違ったやり方だ"
  canal_events.EVTNAME10:0 "運河会社を設立"
- canal_events.EVTDESC10:0 "[Root.GetName]を介して、運河の経済的見通しに関心のある裕福な投資家や商人は、建設を支援するために商業会社を設立しました。"
+ canal_events.EVTDESC10:0 "[Root.GetName]を通る運河の経済的な展望に関心のある裕福な投資家や商人は、建設を支援するために商業会社を設立しました。"
  canal_events.EVTOPTA10:0 "素晴らしい！"
  canal_events.EVTNAME11:0 "運河会社計画"
- canal_events.EVTDESC11:0 "数年前に設立された個人所有の運河会社が破産したようだ。彼らは明らかに深刻な経済問題に直面していたようだが、この情報を一般の人々から隠し、投資家を騙してプロジェクトにますます多くの資金を投入させた。一般的に「運河計画」と呼ばれるものの多くは破綻しており、[Root.Owner.Capital.GetCapitalName]に対して、正義の鉄槌と経済的弁償を要求している民衆が怒りの声を露わにしている。"
+ canal_events.EVTDESC11:0 "数年前に設立された民営の運河会社が破産したようだ。彼らは明らかに深刻な経営難に直面していたようだが、この情報を一般の人々から隠し、投資家を騙してプロジェクトにますます多くの資金を投入させた。一般的に「運河計画」と呼ばれる事件により多くの人々は破産に追い込まれ、[Root.Owner.Capital.GetCapitalName]に怒れる民衆が集結し、正義の鉄槌と経済的弁償を要求している。"
  canal_events.EVTOPTA11:0 "我らのせいではない！"
  canal_events.EVTOPTB11:0 "責任をとろう…"
  canal_events.EVTNAME12:0 "優れたリーダーシップ？"
- canal_events.EVTDESC12:0 "驚いたことに、[Root.GetName]の私たちの運河プロジェクトが予定よりも速く進んでいるようです。"
+ canal_events.EVTDESC12:0 "驚いたことに、[Root.GetName]の私たちの運河プロジェクトが予定よりも早く進んでいるようです。"
  canal_events.EVTOPTA12:0 "これは本当か？"
  canal_events.EVTNAME13:0 "好天に恵まれて"
  canal_events.EVTDESC13:0 "[Root.GetName]の運河工事は、最近は天候にも恵まれ、予定よりも早く工事が進んでいます！"
  canal_events.EVTOPTA13:0 "ようやくの朗報だ"
  canal_events.EVTNAME20:0 "疫病の発生"
- canal_events.EVTDESC20:0 "[Root.GetName]における疫病の発生が当社の運河プロジェクトに打撃を与えました！多くの労働者は、発熱、吐き気、および場合によっては口と眼からの出血の後に死亡しました。いくつかの犠牲者の皮膚が黄色に変わっているとの報告があります…"
+ canal_events.EVTDESC20:0 "[Root.GetName]における疫病の発生が当社の運河プロジェクトに打撃を与えました！多くの労働者は、発熱、吐き気に苦しみ、場合によっては口と眼からの出血の後に死亡しました。いくつかの犠牲者の皮膚が黄色に変わっているとの報告があります…"
  canal_events.EVTOPTA20:0 "代わりの兵士を送る"
  canal_events.EVTOPTB20:0 "最善を願って祈ろう"
  canal_events.EVTNAME21:0 "疫病の発生"
